# lab05

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cicd.yml
HW5/: .travis.yml  CMakeLists.txt
HW5/banking/: CMakeLists.txt
HW5/tests/: CMakeLists.txt  tests.cpp
calc/: calc.cpp  calc.h
connect/: CMakeLists.txt  GMOCK.cpp  connect.cpp  connect.h
formatter_ex_lib/: CMakeLists.txt
formatter_ex_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
formatter_ex_lib/_build/formatter/: Makefile
formatter_lib/: CMakeLists.txt
formatter_lib/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/: CMakeLists.txt
hello_world_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
hello_world_application/_build/formatter_ex/: Makefile  cmake_install.cmake
hello_world_application/_build/formatter_ex/formatter/: Makefile
solver_application/: CMakeLists.txt
solver_application/_build/: CMakeCache.txt  Makefile  cmake_install.cmake
solver_application/_build/formatter_ex/: Makefile  cmake_install.cmake
solver_application/_build/formatter_ex/formatter/: Makefile  cmake_install.cmake
solver_application/_build/solver_lib/: Makefile
solver_lib/: CMakeLists.txt
tests/: CMakeLists.txt  TEST.cpp
